Version 1.2.2 (unreleased)

* This release includes the following changes:

  o Fix crash when server sends an invalid SSH_MSG_IGNORE message.
    Reported by Bob Alexander <balexander@expressor-software.com> in
    <http://thread.gmane.org/gmane.network.ssh.libssh2.devel/2530>.
    By Simon Josefsson.

  o Support for the "arcfour128" cipher as per RFC 4345 for libgcrypt
    and OpenSSL.  It is preferred over the normal "arcfour" cipher
    which is somewhat broken.  By Simon Josefsson.

Version 1.2.1 (September 28, 2009)

* This release includes the following changes:

  o generate and install libssh2.pc

  ... and the following bugfixes:

  o proper return codes returned from several functions
  o return EAGAIN internal cleanup
  o added knownhost.c to windows makefiles
  o pass private-key to OpenSSL as a filename with BIO_new_file().
  o make libssh2_scp_send/recv do blocking mode correctly
  o libssh2_channel_wait_closed() could hang
  o libssh2_channel_read_ex() must return 0 when closed
  o added gettimeofday() function for win32 for the debug trace outputs
  o transport layer bug causing invalid -39 (LIBSSH2_ERROR_BAD_USE) errors
  o scp examples now loop correctly over libssh2_channel_write()

* (August 29 2009) Daniel Stenberg:

 - I fixed all code to use the recently added dedicated linked list functions
   instead of doing the same stuff spread out all over.

 - I also fixed a few cases where local variables where used to keep memory
   but was used to keep state for re-invokes due to non-blocking situations
   which would lead to segfaults.

Version 1.2 (August 10, 2009)
-----------------------------

* (August 02 2009) Alexander Lamaison:

 - changed _libssh2_rsa_new_private and _libssh2_rsa_new_private so that they
   no longer use the OpenSSL functions that take a FILE* argument.  Passing
   CRT-created objects across a DLL boundary causes crashes on Windows of the
   DLL and the client aren't linked to the exact same verison of the CRT. Now