@@ -7,6 +7,10 @@ Version 1.2.2 (unreleased)
     <http://thread.gmane.org/gmane.network.ssh.libssh2.devel/2530>.
     By Simon Josefsson.
 
+  o Support for the "aes128-ctr", "aes192-ctr", "aes256-ctr" ciphers
+    as per RFC 4344 for libgcrypt and OpenSSL.  They are now the
+    preferred ciphers.  By Simon Josefsson.
+
   o Support for the "arcfour128" cipher as per RFC 4345 for libgcrypt
     and OpenSSL.  It is preferred over the normal "arcfour" cipher
     which is somewhat broken.  By Simon Josefsson.
